--- a/user_profile/templates/user_profile/registration_form.html
+++ b/user_profile/templates/user_profile/registration_form.html
@@ -97,6 +97,7 @@
                                           <label>Company Website</label>
                                           {{ user_profile_form.website }}
                                           <input type="hidden" name="reg_save" value="1"/>
+                                          <input type="hidden" name="account_save" value="2"/>
                                       </div>
                                   </div>
                               </div>
